	  wrap_at, and fill to ssize_t in order to work with
	  parse_num() properly and also to increase their capacity
	  while keeping the ability to hold negative numbers in case of
	  errors.  Also exit instead of calling usage() in the event of
	  an invalid fill value, for consistency with how an invalid
	  tabsize value is handled.  Finally, handle invalid tabsize
	  entries in the rcfile the same way as on the command line.
	- Remove several unnecessary reset_cursor() calls. (David
	  Benbennick)
	- Include <sys/types.h> in proto.h. (David Benbennick)  DLR:
	  Remove some redundant inclusions of <sys/types.h> elsewhere.
- files.c:
  close_open_file()
	- Tweak to no longer rely on the return values of
	  open_(prev|next)file(). (DLR)
  write_file()
	- For consistency with nano 1.2.x and with other editors, make
	  the mode of newly created files 666 instead of 600 before
	  it's modified by the umask. (DLR)
  do_writeout()
	- If we're in restricted mode abd the current filename isn't
	  blank, we can't change it, so disable tab completion in that
	  case. (DLR)
- global.c:
  shortcut_init()
	- Fix erroneous #ifdef so that nano compiles with
	  --disable-justify again. (DLR; found by Mike Frysinger)
  thanks_for_all_the_fish()
	- Delete topwin, edit, and bottomwin. (David Benbennick)
- nano.c:
  do_justify()
	- Add on_next_line flag, used to indicate when we've moved to
	  the next line after justifying the current line, and only run
	  the respacing routine when it's true.  This keeps the
	  respacing routine from erroneously being run more than once on
	  the same line. (DLR)
  do_exit()
	- Tweak for efficiency. (David Benbennick)
  main()
	- Move the reset_cursor() call to the beginning of the main
	  input loop, and remove the apparently unnecessary wrefresh()
	  call. (David Benbennick)
- proto.h:
	- Change the variables in the prototypes for do_justify(),
	  get_verbatim_kbinput(), and get_mouseinput() to match the ones
	  used in the actual functions. (DLR)