@@ -38,7 +38,9 @@ CVS code -
 	  errors.  Also exit instead of calling usage() in the event of
 	  an invalid fill value, for consistency with how an invalid
 	  tabsize value is handled.  Finally, handle invalid tabsize
-	  entries in the rcfile the same way as on the command line.
+	  entries in the rcfile the same way as on the command line,
+	  and reset tabsize and wrap_at to their default values if
+	  invalid rcfile entries are specified for them.
 	- Remove several unnecessary reset_cursor() calls. (David
 	  Benbennick)
 	- Include <sys/types.h> in proto.h. (David Benbennick)  DLR:
